<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cust_action_search"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:title="@string/rescan"
        android:id="@+id/rescan"
        android:icon="@drawable/skubiqqrcode"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="true"/>

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="true"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"  />


    <item
        android:id="@+id/action_pack_spinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_spinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cart"
        android:title="@string/cart"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false" />

</menu>