<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.AboutFragment">

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_txt_version"
        style="@style/textViewStyle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60sdp"
        app:layout_constraintStart_toEndOf="@id/tv_version"
        app:layout_constraintTop_toTopOf="@id/tv_version"
        app:layout_constraintBottom_toBottomOf="@id/tv_version"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_txt_ReleaseDate"
        app:layout_constraintStart_toStartOf="@id/tv_version"
        app:layout_constraintTop_toBottomOf="@id/tv_version"
        style="@style/textViewStyle"
        android:layout_marginTop="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tv_release_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="@id/tv_release_date"
        app:layout_constraintBottom_toBottomOf="@id/tv_release_date"
        app:layout_constraintStart_toEndOf="@id/tv_release_date" />

    <TextView
        android:id="@+id/tv_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_txt_visit"
        style="@style/textViewStyle"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date"/>

    <TextView
        android:id="@+id/tv_web_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_76sdp"
        app:layout_constraintStart_toEndOf="@id/tv_visit"
        app:layout_constraintTop_toTopOf="@id/tv_visit"
        app:layout_constraintBottom_toBottomOf="@id/tv_visit"
        android:autoLink="web"
        android:text="@string/fragment_about_txt_inventrax_link"
        android:textSize="@dimen/_14ssp" />

    <ImageView
        android:id="@+id/iv_skubiq"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:src="@drawable/logologin" />

    <TextView
        android:id="@+id/tv_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/_14ssp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

</androidx.constraintlayout.widget.ConstraintLayout>