<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.PalletTransfersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvSelectTenant"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DCE0DF"
            android:padding="7dp"
            android:text="@string/tenant"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spinnerSelectTenant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp" />

        <com.example.skubiq_kotlin.searchableSpinner.SearchableSpinner
            android:id="@+id/spinnerSelectTenant"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectTenant"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnGo"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlIPalletTransfer"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:text="@string/tenant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtTendentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_tenant"
            app:layout_constraintBottom_toBottomOf="@id/tv_tenant"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvScanFromCont"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/lightgreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tenant"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivScanFromCont"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/qr3" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvScanPallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvScanFromCont"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/pallet"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/ll_list_title"
            android:weightSum="3"
            android:padding="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScanPallet"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/sku"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/batch_no"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/quantity"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_list_sku"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_list_title"
            app:layout_constraintEnd_toEndOf="parent">

            <ListView
                android:id="@+id/sku_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sug_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_list_sku"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:hint="@string/suggestedLoc">
        </com.google.android.material.textfield.TextInputEditText>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvScanLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sug_loc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/skubiklocation"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivScanLocation"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/qr3" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvScanNewRSN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cvScanLocation"
            android:text="@string/scanLocation"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvScanLocation"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/btn_clear"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/loginButton"
            android:elevation="30dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/clear"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />


        <Button
            android:id="@+id/btnBinComplete"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/btn_clear"
            app:layout_constraintBottom_toBottomOf="@id/btn_clear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            style="@style/loginButton"
            android:elevation="30dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/transfer"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>