<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tvSelectStRef"
        style="@style/textViewStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#DCE0DF"
        android:padding="7dp"
        android:text="@string/selectStRef"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinnerSelectStRef"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp" />

    <com.example.skubiq_kotlin.searchableSpinner.SearchableSpinner
        android:id="@+id/spinnerSelectStRef"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectStRef"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tvSelectVehcle"
        style="@style/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#DCE0DF"
        android:padding="7dp"
        android:text="@string/select_vehicle"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinnerSelectVehicle"
        app:layout_constraintStart_toStartOf="@id/spinnerSelectStRef"
        app:layout_constraintEnd_toEndOf="@id/spinnerSelectStRef"
        app:layout_constraintTop_toBottomOf="@id/spinnerSelectStRef" />

    <com.example.skubiq_kotlin.searchableSpinner.SearchableSpinner
        android:id="@+id/spinnerSelectVehicle"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectVehcle" />

    <Button
        android:id="@+id/btnGo"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
